Fix: Resolved UI input bugs, added ISBN validation, and fully integrated Service layer logic into ConsoleMenu
Fixed empty string and name validation (Regex) bugs in ConsoleInputHelper.
- Added a custom ISBN validation method (readIsbn) for adding new books.
- Activated readPositiveInt to prevent negative ID inputs during member registration.
- Resolved business logic leakage in ConsoleMenu by delegating search and filter operations directly to LibraryManager.
- Integrated the clearSystemData() method with a safety confirmation prompt into the UI menu (Option 9) for future testing and resets.